Update podcast script file for 2025-07-08

--- a/podcast/2025-07-08.md
+++ b/podcast/2025-07-08.md
@@ -2,84 +2,88 @@
 
 ## Full: Podcast Formatting 
 
-当学术论文里也出现AI痕迹，我们还能相信这份“严谨”吗？
-AI摘要让媒体没了流量，这“智能”到底是在帮谁？
-人类的创意，真的能被AI取代吗？
+AI文本进学术，真能信吗？机器人变形金刚，我们的工作要没了？AI辅助创作，人类创意还值钱吗？
 
-嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。今天我们聊点既让人激动又有点挠头的事儿——AI技术啊，现在是真的一路狂飙，简直像开了挂一样，但它带来的各种“副作用”和“思考题”也越来越多。
+嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。今天，咱们就来聊聊AI这个“磨人的小妖精”，看看它最近又搞出了哪些大动静，以及，嗯，它到底会把我们带向何方。
 
-首先，咱们来看看技术前沿的那些新玩意儿。中国科学院计算技术研究所的团队，这回真是“秀”了一把，他们发布了**Stream-Omni**模型。嗯，你可以把它想象成一个超厉害的AI助手，能同时看懂文字、图像、听懂语音，实现那种“边看边听”的自然交互。虽然吧，它在拟人化和音色多样性上还有点提升空间，但已经为未来的多模态交互打下了实打实的基础了，想想就觉得挺酷的，对吧？
+话说最近啊，中国科学院计算技术研究所的团队，发布了一个叫**Stream-Omni**的多模态大模型，听名字就觉得很高大上对吧？它厉害在哪儿呢？就是能像“边看边听”一样，同时处理文本、视觉、语音，让你跟AI的交互那叫一个自然。想想看，以后跟AI聊天，它不仅能听懂你说啥，还能“看”懂你指着啥，甚至还能用不同的音色跟你对话，是不是感觉自己的电脑不够智能了？虽然现在在拟人化和音色上还有进步空间，但这无疑是给未来的多模态智能交互打了个坚实的地基。
 
-然后，智元公司也放了个大招，推出了**哪吒机器人灵犀X2-N**。这机器人最特别的地方，就是它能像“变形金刚”一样，在轮子和腿之间自由切换形态。这就意味着，无论多复杂的环境，它都能适应得游刃有余。足式模式下能翻山越岭、负重前行，轮式模式又快又灵活，就算被推搡一下也能稳如泰山，你说厉不厉害？
+诶，说到高大上，智元公司也整了个活儿，发布了一款“变形金刚”机器人，叫**哪吒机器人灵犀X2-N**。这机器人最酷的地方就是能“轮足双形态”切换，你想啊，在崎岖不平的地方，它就迈着小脚丫灵活越障；换个平地，嗖一下，轮子一出，就跑得飞快。据说，你推它都不会倒，这哪吒，简直就是机器人界的“哪吒闹海”啊，适应能力一流。
 
-当然了，大家期待已久的**OpenAI GPT-5**，也终于定档今年夏天要和我们见面了。据说这次啊，他们要把O系列模型强大的推理能力，和GPT系列的多模态功能完美整合，变成一个统一的版本。这样一来，我们以后就不用在不同模型之间来回切换了，体验肯定会更流畅、更高效。这波操作，哎呀，真是让人无限期待啊！
+当然，提到AI，怎么能少了OpenAI呢？他们也官宣了，大家期待已久的**GPT-5**，今年夏天就要来了！据说，这回它要把现有的强大推理能力和多模态功能完美整合，变成一个统一的版本。嗯，听起来是不是有点像把“学霸”和“社交达人”合二为一了？目标是让你用起来更流畅、更高效，不用在不同模型间跳来跳去，省心。
 
-再说回咱们生活里。你发现没？智能音箱市场在经历了四年的低迷后，在今年的618期间居然迎来了强劲复苏！销量和销售额都有了不小的增长。这背后最大的功臣，就是AI大模型技术的广泛应用。像小米的“超级小爱”、百度的“文心大模型”智能音箱，它们在智能问答和交互能力上的提升，那是真真切切的“质的飞跃”，让消费者更愿意为这种更人性化的体验买单。
+除了这些“大明星”，小日子也过得有滋有味。你知道吗？智能音箱市场最近居然“起死回生”了！在618期间，销量和销售额都涨了不少，这背后最大的功臣就是**AI大模型**。消费者现在就喜欢那种交互更人性化、更智慧的音箱，这AI音箱，是不是比你家猫还听话？像小米的“超级小爱”和百度的“文心大模型”加持的新品，都卖得特别好。看来，AI技术真把这智能音箱从“听个响”拉到了“真智能”的层次。
 
-还有，编程界也迎来了新星。Anthropic的**Claude Code**，发布才四个月，就已经吸引了十几万开发者，一周内处理了近两亿行代码，预估年收入都上亿美元了。它强大的代码生成和项目架构理解能力，可是大大提升了开发效率，连不少资深开发者都纷纷转向它了。这充分说明了AI编程工具在提高生产力方面的巨大潜力。
+还有啊，Anthropic的**Claude Code**，发布才四个月，就吸引了十几万开发者，一周内处理了近两亿行代码，简直是编程界的新星。这年头，写代码都能躺平了，是不是感觉开发效率噌噌往上涨？
 
-不过啊，科技进步的同时，也带来了一些值得我们深思的问题。比如，《自然》杂志最近就揭露了一个现象：2024年，PubMed上竟然有超过14%的生物医学论文摘要，出现了AI生成文本的“特征词”！尤其在一些非英语国家和开放获取期刊里，这个比例更高。这就不得不让人思考了：当AI开始深度参与学术写作，我们该如何保证科研的严谨性和公正性呢？这可不是小事儿。
+不过，AI这股风，吹得可不都是顺风。最近，《自然》杂志就发了个研究，说2024年**PubMed**上的生物医学论文摘要里，有差不多14%都出现了**AI生成文本**的特征词。尤其在一些发表门槛比较低的期刊里，这个比例更高。这就引出了一个问题：这AI写的文章，到底靠不靠谱？学术的严谨性和公正性还能不能保证？这背后的思考，是不是也敲响了我们对未来信息真伪的警钟呢？
 
-接着，出版界和谷歌也杠上了。独立出版商联盟已经向欧盟委员会递交了反垄断投诉，指控谷歌的AI摘要功能“滥用网络内容”，导致出版商流量、读者和收入严重损失。诶，这事儿啊，再次把大型科技公司如何使用网络内容和数据的问题推到了风口浪尖，后续发展肯定还会引爆业界热议。这蛋糕到底怎么分，可是个大问题。
+不止学术界，商业世界也为AI吵翻了天。独立出版商联盟，最近就因为谷歌搜索引擎里的**AI摘要**功能，把谷歌告到了欧盟委员会，说谷歌“滥用网络内容”，把他们的流量、读者和收入都给“吸”走了。这事儿再次把大型科技公司如何使用网络内容的问题推到了风口浪尖，可见AI带来的冲击，已经不止于技术层面，更是触及了利益和规则的边界。
 
-还有皮克斯的首席创意官彼特・道克特，他就“吐槽”说现在的AI技术“有点无聊”。但他特别强调，在动画创作中，人类的创意是无可替代的。他还是期待AI能帮忙减轻一些工作负担。你看，这话说得很有意思，AI可以是工具，但核心的创意，还得是咱们人类来掌控，对吧？
+当然，也有人对AI保持着清醒的认识。皮克斯的首席创意官彼特·道克特就“吐槽”说现在的AI技术“很无聊”。他强调，在动画创作中，**人类创意**是无可替代的！他依然期待AI能帮大家减轻工作负担。所以你看，人类的创意和判断，依然是AI无法取代的。所以，别焦虑，多学学怎么跟AI“搭档”才是正道。
 
-当然，AI也带来了很多提升效率的“神器”。像Pickle团队推出的**Glass**开源AI桌面助手，它独特的“隐形设计”，超快的实时信息处理能力，以及强大的上下文理解能力，已经成了不少“打工人”的新宠。它能把屏幕上零散的信息整理成结构化知识，比如开会记录、学习辅助，甚至编程支持，真的是提高效率的一把好手。
+最后再给大家带来几个小惊喜。B站也要搞自己的**AI创作工具**了，代号“代号H”，说是输入文案和音频，千字内容6分钟就能自动生成视频！这简直是为创作者量身定制的神器，这是要让大家彻底告别PPT制作的噩梦吗？还有，谷歌的**Gemini CLI**命令行工具，现在竟然能识别视频信息，结合FFmpeg，就能实现简单的视频自动剪辑！这不就是传说中的“懒人福音”嘛？
 
-谷歌的**Gemini CLI**命令行工具也更新了，现在竟然能读取和识别视频信息，结合FFmpeg，都能实现简单的视频自动剪辑了！真是“不写代码也能高效工作”的又一范例，对于内容创作者和视频剪辑小白来说，这简直是懒人福音啊。
+嗯，今天的AI情报站就到这里，你是不是也对未来又多了一分期待，又多了一点思考呢？
 
-最后，咱们再来听听一些大佬们的思考。Andrej Karpathy分享了成为某个领域专家的三个核心方法论：项目驱动，按需学习；用自己的话教学或总结来验证理解；只与过去的自己比较来维持内生动力。这套方法论，说白了，就是一种高效的成长算法，持续迭代，不断进化。
+今天的情报就到这里，注意隐蔽，赶紧撤离。
 
-内容创业者王梦珂Mengke也分享了她用OpenAI和Kimi进行选题调研的对比。她发现Kimi在处理中文本地内容时，表现得更接地气，能引用国内真实来源，生成结构化报告。她还给出了三个避免“AI幻觉”的实用技巧，强调了选择合适工具和验证信息的重要性。这简直是干货满满，实用至极啊！
+本期关键词:
+#Stream-Omni
+#多模态模型
+#智元
+#机器人
+#OpenAI
+#GPT-5
+#智能音箱
+#Claude Code
+#学术写作
+#内容创作
+#AGI
+#工具应用
 
-而博主“宝玉”对AGI，也就是通用人工智能的到来，就保持了一种谨慎但乐观的态度。他认为当前的大语言模型缺乏像人类一样的“持续学习能力”，这是个瓶颈，所以短期内还不能完全取代白领工作。但长期来看，他对AI的前景又极度看好，预测2028年AI能处理小企业税务，2032年实现类人持续学习，甚至指出一旦持续学习问题解决了，就可能迅速催生“超级智能”。听起来是不是有点像科幻电影了？
+## Short: Podcast Formatting 
 
-宝玉还提到，AI视频制作正接近它的“GPT时刻”！这意味着它将从专业人士的工具，变成普通人也能轻松上手的实用工具。他亲测用简单的提示词就生成了有趣的《西游记》主题视频，这预示着未来我们每个人都能以惊人的速度，把脑海里的创意变成生动的影像。
+AI生成文本已经渗入学术论文，这会影响科研的严谨性和公正性吗？
+当AI摘要开始“滥用”网络内容，传统出版商的生计该怎么办？
+如果AI能像人类一样持续学习，那人类的创造力还会是唯一的“王牌”吗？
 
-你看，AI的世界就是这么丰富多彩，既有令人惊叹的技术突破，也有需要我们共同面对的挑战和思考。希望今天的这些情报，能给你带来一些启发和不一样的视角。
+嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。
+
+今天的情报有点意思。首先，国内AI技术又放大招了！中科院计算所发布了Stream-Omni，一个能“边看边听”的多模态大模型，听起来就像未来的人机交互。智元公司也不甘示弱，推出了能“变形”的哪吒机器人灵犀X2-N，轮足双形态切换，适应各种复杂地形，简直是机器人界的“变形金刚”。
+
+再来看看国际动态。OpenAI证实GPT-5今年夏天就要来了，它目标是整合现有的推理和多模态功能，让体验更流畅。国内B站也计划推出“代号H”的AI创作工具，帮你自动匹配视频画面，千字内容6分钟生成，看来创作者们要起飞了！
+
+市场方面也有好消息，智能音箱市场在经历四年低迷后终于强势复苏。618期间销量和销售额都蹭蹭上涨，主要功臣就是那些搭载了AI大模型的智能音箱，消费者就爱这种更智慧的交互体验。小米和百度都表现亮眼，成了领头羊。
+
+在开发者圈，Anthropic的Claude Code才发布四个月，就吸引了超过11万开发者，一周能处理将近两亿行代码，这生产力提升得真是肉眼可见啊！
+
+不过，AI的快速发展也带来了一些小困扰。比如《自然》杂志就发现，去年PubMed上居然有14%的生物医学论文摘要都出现了AI生成文本的特征词，这让大家开始思考AI在学术写作中的规范性和严谨性。另外，谷歌搜索引擎的AI摘要功能也引来了出版商的反垄断投诉，他们认为谷歌“滥用网络内容”，影响了大家的流量和收入。甚至连皮克斯的首席创意官都说，现在的AI技术“有点无聊”，但他依然期待AI能帮人类减轻工作负担，毕竟人类创意还是动画创作的核心。
+
+当然，AI也带来了很多提升效率的好工具。比如新出的Glass开源AI桌面助手，它隐形设计，能实时处理屏幕和音频信息，帮你整理成结构化知识，开会、学习都超实用。谷歌的Gemini CLI也更新了，现在能处理音视频，结合FFmpeg还能实现简单的视频自动剪辑，是不是很方便？
+
+最后，我们来聊聊对AI未来的看法。有博主认为，AGI（通用人工智能）的主要瓶颈在于大模型还缺乏像人类一样的持续学习能力，不能像我们一样通过经验不断成长。但他也超看好AI的长期前景，预测一旦解决了持续学习问题，就可能迅速催生超级智能，甚至觉得AI视频制作正迎来它的“GPT时刻”，未来普通人也能轻松把创意变成视频！
 
 今天的情报就到这里，注意隐蔽，赶紧撤离。
 
 本期关键词:
 #AI
-#模型
+#Stream-Omni
 #多模态
 #机器人
 #GPT-5
 #智能音箱
-#ClaudeCode
+#Claude Code
 #学术写作
-#AI摘要
-#人类创意
+#内容创作
 #AGI
-#持续学习
-#AI视频制作
-#开源
+#谷歌
+#出版商
+#皮克斯
 #桌面助手
-#命令行工具
-#效率
-#生产力
-#AI幻觉
-
-## Short: Podcast Formatting 
-
-AI生成内容，会不会让学术诚信亮红灯？AI摘要功能，真的在“白嫖”原创内容吗？人类创意在AI时代，到底还有没有饭碗？嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。
-
-咱们国家的中科院计算所，最近发布了多模态大模型Stream-Omni，它能让你“边看边听”，体验超自然的交互，给未来的多模态智能打下了坚实基础。智元公司也放了个大招，他们的新机器人“哪吒灵犀X2-N”能轮足双形态切换，简直是现实版变形金刚，适应各种复杂地形。
-
-OpenAI那边呢，重磅炸弹GPT-5确认今夏登场，它要把现有模型的推理和多模态功能合二为一，以后用起来就更顺手了。B站也悄悄憋了个大招，代号“H”的AI创作工具即将上线，只要给文案和音频，千字内容6分钟就能自动生成视频，这效率，内容创作者们有福了。
-
-说回咱们的日常生活，智能音箱市场在经历四年低迷后，终于在618强势复苏。销量和销售额双双上涨，这背后最大的功臣就是AI大模型。消费者对搭载大模型的智能音箱需求越来越高，小米和百度的新品都表现亮眼，预示着这个市场将迎来稳定增长。
-
-在开发者圈里，Anthropic的Claude Code才发布四个月，就吸引了11.5万名开发者，处理了1.95亿行代码，这生产力简直惊人！很多开发者都转投它的怀抱，可见AI编程工具的潜力有多大。
-
-不过，AI的快速发展也带来了一些小困扰。比如《自然》杂志就发现，去年PubMed上14%的生物医学论文摘要有AI生成文本的特征，这让学术诚信问题浮出了水面。独立出版商联盟也怒了，他们投诉谷歌的AI摘要功能“白嫖”网络内容，损害了他们的流量和收入。
-
-对于AI，皮克斯的首席创意官彼特·道克特倒是有个挺有意思的看法，他说目前的AI“很无聊”，人类创意是无可替代的，但他还是希望AI能帮大家减轻工作负担。这不，已经有Glass这种开源AI桌面助手了，它能隐形地处理屏幕和音频信息，帮你整理会议记录、学习资料，妥妥的效率神器。
-
-最后聊聊AI的未来。谷歌的Gemini CLI工具更新后，甚至能读取视频信息，结合FFmpeg就能帮你自动剪辑视频，这简直是不写代码也能高效工作的典范。有博主拿Kimi和OpenAI做了个对比，发现Kimi在处理中文本地内容上更有优势。而对于AI的终极形态，AGI，也有博主认为，现在大模型最大的瓶颈就是缺乏持续学习能力，不过一旦突破，超级智能可能就离我们不远了。这不就是我们一直在思考的，AI究竟会走向何方吗？
-
-今天的情报就到这里，注意隐蔽，赶紧撤离。
-
-本期关键词:
-#Stream-Omni #多模态模型 #智元机器人 #GPT5 #B站AI工具 #智能音箱 #AI大模型 #ClaudeCode #开发者 #AI学术写作 #谷歌AI摘要 #人类创意 #AI辅助创作 #Glass #GeminiCLI #AGI #持续学习 #AI视频
+#Gemini CLI
+#开源
+#持续学习
+#超级智能
+#视频制作
+#大模型
