--- a/daily/2025-06/2025-06-16.md
+++ b/daily/2025-06/2025-06-16.md
@@ -8,7 +8,7 @@
 
 ### **开源TOP项目**
 1. **deepeval**是一款拥有7959颗星的**LLM评估框架**，专为**大语言模型**提供**专业的性能评估**能力，帮助开发者**衡量模型效果**。['项目地址'](https://github.com/confident-ai/deepeval)
-2. "all-rag-techniques”是一个坐拥**4166星**的**开源项目**，它的厉害之处在于能用更简单的方法实现所有**RAG技术**，大大减轻了开发者的负担。['项目地址'](https://github.com/FareedKhan-dev/all-rag-techniques)
+2. "all-rag-techniques”是一个坐拥**4166星**的**开源项目**，它的厉害之处在于能用更简单的方法实现所有**RAG技术**，大大减轻了开发者的负担。['项目地址'](https://github.com/FareedKhan-dev?tab=repositories)
 3. 拥有**36291星**的"ai-hedge-fund”项目可不一般，它是一个用**AI技术**武装起来的**对冲基金团队**，专门通过**人工智能驱动的策略**进行**金融投资**。['项目地址'](https://github.com/virattt/ai-hedge-fund)
 
 ### **社媒分享**
